refactored ChatModule.
